<package>
  <name>hunt_rehoboam</name>
  <version>1.13.1</version>
  <description>
    Main FSM for hunt project. Rehoboam is the name of the hivemind in
    the show Westworld.
  </description>
  <maintainer email="foo@foo.com">Foo Foo</maintainer>
  <author email="foo@foo.com">Foo Foo</author>
  <license>BSD</license>

  <url>http://wiki.ros.org/</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
